# Trajectory_App

./: .gitignore  CMakeLists.txt  GCode.g4  GCode.interp  GCode.tokens  GCodeInterpreter.py  GCodeLexer.interp  GCodeLexer.py  GCodeListener.py  GCodeParser.py  Interface.py  PicoW-pi7.code-workspace  README.md  main.py
src/: CmakeLists.txt  FreeRTOSConfig.h  main.c
src/drivers/ledonboard/: leds.c  leds.h
src/drivers/uart/: uart.c  uart.h
src/pi7/comm_pc/: modbus.c  modbus.h
src/pi7/comm_pic/: comm_pic.c  comm_pic.h
src/pi7/command_interpreter/: command_interpreter.c  command_interpreter.h
src/pi7/polinomio_pc/: polinomio.c  polinomio.h
src/pi7/trj_control/: trj_control.c  trj_control.h
src/pi7/trj_program/: trj_program.c  trj_program.h
